[package]
name = "wrtest"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rayon = "1.8"

# init promise never resolves
wasm-bindgen-rayon = "1.2"

# init promise resolves
# wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }
